feat: added application realm-groups (#563)
* feat: added backend config #562

* fix: clean code

* feat: app realm-groups ui

* feat: realm with list of groups

* fix: search app by id/name

* fix: app redirect url validation